# mcp-base64

./: .droid.yml  .gitignore  AGENTS.md  README.md  RESTART.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml  test-suite.yml
docs/: CLINE_TASK_CURRENT.md
docs/ai-setup/: 01-INITIAL-PROMPT.md  02-RESTART-PROMPT.md  cline-initial-task-prompt-sdk-agnostic-v6.md  cline-initial-task-prompt-sdk-agnostic.md  ollama_admin_ui.html
docs/test-files/: 40px-Testing.base64
scripts/: lint.sh
src/mcp_base64/: __init__.py  server.py  utils.py
src/mcp_base64.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_tools.py
