[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-base64"
version = "0.1.0"
description = "Model Context Protocol server providing Base64 file conversion tools"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Factory Droid" }
]
dependencies = [
  "mcp>=0.1.0",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/factory/mcp-base64"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.ruff.format]
quote-style = "double"
