[project]
name = "mcp-base64"
version = "0.1.4"
description = "MCP server for Base64 file conversion (stdio transport)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stefan Kuhn" }]
keywords = ["mcp", "base64", "fastmcp", "cli"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.15.3,<1",
    "yamllint>=1.38.0,<2",
    "pymarkdownlnt>=0.9.35,<1",
    "pyright>=1.1.408,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-base64 = "mcp_base64.server:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PL", "SLF"]
ignore = ["S101", "COM812", "ISC001"]
per-file-ignores = { "tests/**" = ["SLF001"] }

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_base64"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
