[build-system]
requires = ["hatchling>=1.18,<2", "hatch-vcs>=0.0,<1"]
build-backend = "hatchling.build"

[project]
name = "mcp-base64"
description = "MCP server for Base64 file conversion (stdio transport)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Stefan Kuhn" }]
dependencies = [
  "fastmcp>=0.2.0",
  "pydantic>=2.0.0",
]
dynamic = ["version"]

[project.scripts]
mcp-base64 = "mcp_base64.server:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mcp_base64/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_base64"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",        # errors
  "F",        # correctness
  "I",             # imports
  "UP",            # pyupgrade
  "B",             # bugbear
  "PL",            # pylint rules (incl. protected access)
  "SLF",           # flake8-self (private member access)
]
per-file-ignores = { "tests/**" = ["SLF001"] }
